# cloud-scraper

./: .gitignore  .markdownlint-cli2.yaml  Authentication.md  Cargo.toml  Compilation Requirements.md  Contributing.md  README.md  root_password.yaml
.github/workflows/: ci.yml  rust-clippy.yml
cloud_scraper/: Cargo.toml
cloud_scraper/resources/js/: redirect.js
cloud_scraper/src/: lib.rs  main_impl.rs  test.rs
cloud_scraper/src/core/: engine.rs  node_handles.rs  root_password.rs
cloud_scraper/src/domain/: channel_handle.rs  config.rs  mod.rs  module_state.rs
cloud_scraper/src/domain/node/: mod.rs
cloud_scraper/src/domain/oauth2/: application_secret.rs  config.rs  mod.rs  token.rs
cloud_scraper/src/integration/google/: mod.rs  source.rs
cloud_scraper/src/integration/google/auth/: config.rs  delegate.rs  mod.rs
cloud_scraper/src/integration/google/tasks/: sync.rs
cloud_scraper/src/integration/stub/: mod.rs
cloud_scraper/src/macros/: test.rs
cloud_scraper/src/server/: auth.rs  events.rs  mod.rs  root.rs  routes.rs
cloud_scraper/src/server/acme/: mod.rs
cloud_scraper/src/server/javascript/: mod.rs
cloud_scraper/src/server/oauth2/: mod.rs
cloud_scraper/src/server/websocket/: use_websocket.rs
cloud_scraper/src/static_init/: error.rs
cloud_scraper/tests/fixtures/: cert.pem  key.pem
diagrams/: component.puml  context.puml  external_tls_termination.puml  source_and_sink_abstractions.puml
functional_tests/: Cargo.toml
functional_tests/tests/cucumber/: cli_world.rs  google_world.rs  shared.rs
functional_tests/tests/cucumber/google/: client.rs
functional_tests/tests/features/cli/: config.feature  serve.feature
functional_tests/tests/fixtures/: empty_config.yaml
resources/html/: index.html  login.html
resources/html/config/: google.html
resources/js/: redirect.js
src/: lib.rs  main.rs  main_impl.rs  root_password.rs  test.rs
src/core/: cli.rs  config.rs  construct_config.rs  engine.rs  error.rs  hash.rs  mod.rs  module.rs  node_handles.rs  password.rs  pipeline.rs  root_password.rs  serde_yaml.rs
src/domain/: channel_handle.rs  config.rs  entity.rs  entity_consumer.rs  entity_data.rs  entity_identifier.rs  entity_translator.rs  entity_user.rs  identifiable_sink.rs  identifiable_source.rs  mod.rs  mpsc_handle.rs  node.rs  sink.rs  sink_identifier.rs  source.rs  source_identifier.rs  stop_task.rs
src/domain/entity_data/: mod.rs  string_entity_data.rs  uuid_entity_data.rs
src/domain/node/: manager.rs  mod.rs
src/domain/oauth2/: application_secret.rs  client.rs  extra_parameters.rs  mod.rs  token.rs
src/integration/: mod.rs  no_op_translator.rs
src/integration/dependencies/: headless_browser.rs  mod.rs
src/integration/google/: mod.rs  source.rs
src/integration/google/auth/: delegate.rs  mod.rs  web.rs
src/integration/google/keep/: auth.rs  config.rs  error.rs  google_keep.rs  hub.rs  mod.rs  source.rs  translator.rs
src/integration/google/tasks/: sync.rs
src/integration/log/: mod.rs  sink.rs
src/integration/stub/: mod.rs  source.rs  translator.rs
src/macros/: arc_mutex.rs  mod.rs
src/server/: auth.rs  errors.rs  events.rs  mod.rs  oauth_installed_flow_delegate.rs  routes.rs  site_state.rs  web_server.rs
src/server/acme/: challenge_token_server.rs  mod.rs  types.rs
src/server/javascript/: redirect.rs
src/server/oauth2/: mod.rs
src/server/page/: login.rs  mod.rs
src/server/websocket/: mod.rs  result.rs  socket.rs  use_websocket.rs  websocket.rs  websocket_handler.rs
src/static_init/: error.rs  mod.rs  pipelines.rs  singleton.rs  sinks.rs  sources.rs  translators.rs
tests/: cli.rs
tests/cucumber/: cli_world.rs  google_bindings.rs  google_world.rs  main.rs  shared.rs
tests/cucumber/google/: client.rs
tests/cucumber_cli/: cli_world.rs  main.rs
tests/features/: config.feature  serve.feature
tests/features/google/: source.feature
tests/fixtures/: config.yaml  empty_config.yaml
