[package]
name = "cloud_scraper"
version = "0.1.0"
edition = "2021"

#![feature(async_fn_in_trait)]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.*"
chrono = { version = "0.4.*", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11.*"
google-keep1 = "5.0.*"
log = "0.4.*"
once_cell = "1.19.*"
parking_lot = "0.12.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_yaml = { version = "0.9.*", features = [] }
strum = "0.26.*"
strum_macros = "0.26.*"
tokio = { version = "1.37.*", features = ["rt", "rt-multi-thread", "macros"] }
tokio-test = "0.4.*"
uuid = { version = "1.8.*", features = ["serde", "v4"] }
async_once = "0.2.*"
debug-ignore = "1.0.*"
fantoccini = "0.19.*"
lazy_static = "1.4.*"
time = "0.3.*"

[dev-dependencies]
assert_cmd = "2.0.*"
matches = "0.1.*"
mockall = "0.12.*"
predicates = "3.1.*"
