[package]
name = "cloud_scraper"
version = "0.1.0"
edition = "2021"

#![feature(async_fn_in_trait)]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acme2 = "0.5.1"
async-trait = "0.1.77"
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
derive-getters = "0.5.0"
derive_builder = "0.20.1"
env_logger = "0.11.1"
handlebars = "6.0.0"
hex = "0.4.3"
hmac = "0.12.1"
hyper-util = "0.1.7"
lazy_static = "1.4.0"
log = "0.4.20"
oauth2 = "4.4.2"
parking_lot = "0.12.1"
paste = "1.0.15"
pbkdf2 = "0.12.2"
rand = "0.8.5"
rpassword = "7.3.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = { version = "0.9.29", features = [] }
sha2 = "0.10.8"
strum = "0.26.1"
strum_macros = "0.26.1"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros", "signal", "time"] }
tokio-stream = "0.1.15"
url = "2.5.2"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
warp = { version = "0.3", features = ["tls"] }
x509-parser = "0.16.0"

[dev-dependencies]
cucumber = "0.21.1"
mockall = "0.13.0"
once_cell = "1.19.0"
predicates = "3.0.4"
regex = "1.11.0"
tokio = { version = "1.35.1", features = ["process"] }
tokio-test = "0.4.3"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[[test]]
name = "cucumber_cli"
harness = false
